# crate-versions-experiment

./: Cargo.toml
crates/inner-crate/: Cargo.toml
crates/inner-crate/src/: lib.rs
src/: lib.rs
top-crate/: Cargo.toml
top-crate/src/: lib.rs
