[package]
name = "crate-version-experiment"
version = "0.3.2-branch-name.0"
description = "Experimenting with releases"
authors = ["Fluence Labs"]
readme = "Readme.md"
license = "Apache-2.0"
edition = "2018"

[package.metadata.docs.rs] # https://docs.rs/about
all-features = true

[lib]
path = "src/lib.rs"

[workspace]
members = [
  "crates/inner-crate",
  "top-crate"
]
